# 7thDeck

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  flake.nix  install.bat  install.sh
resources/: 7th Heaven.desktop  controller_neptune_gamepad+mouse+click.vdf  settings.xml
src/: config_handler.rs  dialog.rs  lib.rs  logging.rs  main.rs  proton.rs  resource_handler.rs
src/launcher/: main.rs
src/steam_helper/: game.rs  mod.rs  proton.rs
src/steamhelper/: game.rs  mod.rs  proton.rs
