[package]
name = "seventh-deck"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "7thDeck"
path = "src/main.rs"

[dependencies]
glob = "0.3.2"
native-dialog = "0.7.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde_json = "1.0.138"
steamlocate = "2.0.0-beta.2"
sysinfo = "0.30.12"
