[package]
name = "seventh-deck"
version = "0.1.0"
edition = "2021"
default-run = "7thDeck"

[[bin]]
name = "7thDeck"
path = "src/main.rs"

[[bin]]
name = "launcher"
path = "src/launcher/main.rs"

[dependencies]
anyhow = "1.0.98"
console = "0.15.10"
dialoguer = "0.11.0"
glob = "0.3.2"
home = "0.5.11"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
keyvalues-parser = "0.2.0"
log = "0.4.25"
log4rs = "1.3.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
rfd = "0.15.2"
serde = "1.0.217"
serde_json = "1.0.138"
steamlocate = "2.0.1"
sysinfo = "0.30.12"
textwrap = "0.16.1"
toml = "0.8.20"
urlencoding = "2.1.3"
users = "0.11.0"
xdg = "3.0.0"
